--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,161 +16,91 @@
       </div>
     </header>
 
-  <section class="yearbook">
-    <div class="card-column">
-      <div class="card">
-        <figure>
+      <section class="yearbook">
+        <figure class="card">
           <img src="images/annika.jpg" alt="Annika">
           <figcaption>Annika</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/bjorn.jpg" alt="Bjorn">
           <figcaption>Björn</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/cissi.jpg" alt="Cissi">
           <figcaption>Cissi</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/damien.jpg" alt="Damien">
           <figcaption>Damien</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/emelie.jpg" alt="Emelie">
           <figcaption>Emelie</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/fredrik.jpg" alt="Fredrik">
           <figcaption>Fredrik</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/hilda.jpg" alt="Hilda">
           <figcaption>Hilda</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/jimma.jpg" alt="Jimma">
           <figcaption>Jimma</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/kaisa.jpg" alt="Kaisa">
           <figcaption>Kaisa</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/karin.jpg" alt="Karin">
           <figcaption>Karin</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/katarina.jpg" alt="Katarina">
           <figcaption>Katarina</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/katrin.jpg" alt="Katrin">
           <figcaption>Katrin</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/linn.jpg" alt="Linn">
           <figcaption>Linn</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/marie.jpg" alt="Marie">
           <figcaption>Marie</figcaption>
         </figure>
-      </div>
-    </div>
 
-    <div class="card-column">
-      <div class="card">
-        <figure>
+        <figure class="card">
           <img src="images/nicole.jpg" alt="Nicole">
           <figcaption>Nicole</figcaption>
         </figure>
-      </div>
-    </div>
 
+        <figure class="card">
+          <img src="images/sofia.jpg" alt="Sofia">
+          <figcaption>Sofia</figcaption>
+        </figure>
 
-    <div class="card-column">
-      <div class="card">
-          <figure>
-            <img src="images/sofia.jpg" alt="Sofia">
-            <figcaption>Sofia</figcaption>
-          </figure>
-        </div>
-      </div>
-
-      <div class="card-column">
-        <div class="card">
-          <figure>
-            <img src="images/therese.jpg" alt="Therese">
-            <figcaption>Therese</figcaption>
-          </figure>
-        </div>
-      </div>
-    </section>
-
+        <figure class="card">
+          <img src="images/therese.jpg" alt="Therese">
+          <figcaption>Therese</figcaption>
+        </figure>
+      </section>
   </body>
 </html>
